# tcas

./: .gitignore  CMakeLists.txt  README.md
doc/: pres.nav  pres.snm  pres.tex  tcas.bib  tcas.tex  tcas_appendix_code.tex
doc/chart/: evaluator.xml  expr_structs.xml  general_flowchart.xml  parser.xml
src/: Makefile  tcas.c  tcas.h  tcas_cli.c  test.c
src/math/: math.c  math.h  math_constants.c  math_constants.h  type_util.c  type_util.h
src/math/adv/: factorial.c  factorial.h  log.c  log.h  power.c  power.h  trig.c  trig.h
src/math/basic/: divide.c  divide.h  minus.c  minus.h  plus.c  plus.h  times.c  times.h
src/math/calc/: derive.c  derive.h  gruntz.c  gruntz.h  mrv.c  mrv.h  series.c  series.h  taylor.c  taylor.h
src/math/tools/: gruntz_types.c  gruntz_types.h  simplify.c  simplify.h
src/parser/: Makefile  parser.c  parser.h  rpn_defs.c  rpn_defs.h  rpn_parser.c  rpn_parser.h  test  test.c  util.c  util.h
src/reducer/: Makefile  reducer.c  reducer.h  test.c
src/test/: adv_test.c  adv_test.h  basic_test.c  basic_test.h  calc_test.c  calc_test.h  derive_test.c  derive_test.h  hash_test.c  hash_test.h  taylor_test.c  taylor_test.h  test_util.c  test_util.h  util_test.c  util_test.h
src/tokenizer/: Makefile  test  test.c  tokenizer.c  tokenizer.h
src/translator/: Makefile  test  test.c  translator.c  translator.h  translator_util.c  translator_util.h
src/types/: expr_structs.h  gruntz_types.h  parser_enums.h  parser_structs.h  tcas_enums.h  tcas_structs.h  tokenizer_structs.h
src/util/: debug_util.c  debug_util.h  hash.c  hash.h  mem_util.c  mem_util.h  parse_util.c  parse_util.h  taylor_util.c  taylor_util.h  tree_util.c  tree_util.h  val_util.c  val_util.h
src/xml/: Makefile  test  test.c  xml.c  xml.h
util/: common_hashes
util/xml_grapher/: README.md  script.py
